JumpScript/tests/baselines/reference/overloadResolutionOnDefaultConstructor1.errors.txt
tests/cases/compiler/overloadResolutionOnDefaultConstructor1.jump(3,16): error TS2554: Expected 0 arguments, but got 1.


==== tests/cases/compiler/overloadResolutionOnDefaultConstructor1.jump (1 errors) ====
    class Bar {
        public clone() {
            return new Bar(0);
                   ~~~~~~~~~~
!!! error TS2554: Expected 0 arguments, but got 1.
        }
    }